[FIX]  careInProgress styles button gap

--- a/client/src/ui/components/care-in-progress/styles.module.scss
+++ b/client/src/ui/components/care-in-progress/styles.module.scss
@@ -168,6 +168,7 @@
 			justify-self: flex-end;
 			align-items: center;
 			justify-content: center;
+			gap: 1rem;
 			button {
 				width: 100%;
 				font-size: 1.5rem;
